--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles_build"
+        "distDir": "staticfiles"
       }
     }
   ],
@@ -25,4 +25,3 @@
     }
   ]
 }
-
